; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/pseudofs/extr_pseudofs_fileno.c_pfs_fileno_uninit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/pseudofs/extr_pseudofs_fileno.c_pfs_fileno_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pfs_info = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pfs_fileno_uninit(%struct.pfs_info* %0) #0 {
  %2 = alloca %struct.pfs_info*, align 8
  store %struct.pfs_info* %0, %struct.pfs_info** %2, align 8
  %3 = load %struct.pfs_info*, %struct.pfs_info** %2, align 8
  %4 = getelementptr inbounds %struct.pfs_info, %struct.pfs_info* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @delete_unrhdr(i32* %5)
  %7 = load %struct.pfs_info*, %struct.pfs_info** %2, align 8
  %8 = getelementptr inbounds %struct.pfs_info, %struct.pfs_info* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.pfs_info*, %struct.pfs_info** %2, align 8
  %10 = getelementptr inbounds %struct.pfs_info, %struct.pfs_info* %9, i32 0, i32 0
  %11 = call i32 @mtx_destroy(i32* %10)
  ret void
}

declare dso_local i32 @delete_unrhdr(i32*) #1

declare dso_local i32 @mtx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
